--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -60,6 +61,7 @@
     <a href="#stage2">Stage 2</a>
     <a href="#stage3">Stage 3</a>
     <a href="#conclusion">Conclusion</a>
+    <a href="#future">Future</a>
   </nav>
 
   <div class="container">
@@ -88,6 +90,12 @@
       <p>In this project, we addressed a real issue—spinal cord injuries—and proposed a technological solution using exoskeletons. We also developed an educational prototype that facilitates learning about human body systems.</p>
       <p>In Stage 1, we explored the severity of SCIs. In Stage 2, we presented an innovative proposal based on medical robotics. And in Stage 3, we created a practical educational tool that merges robotics with biology.</p>
       <p>This work demonstrates how technology can transform both education and healthcare, improving learning and patients' quality of life.</p>
+    </section>
+
+    <section id="future">
+      <h2>Future of Transportation: Autonomous Vehicles</h2>
+      <p>The advancement of transportation technology continues to push the boundaries of innovation, with autonomous vehicles emerging as a key development in the quest for safer and more efficient mobility. This prototype represents a significant step toward reducing traffic accidents caused by human error, enhancing road safety, and optimizing urban transportation systems. By utilizing advanced artificial intelligence, sensors, and real-time data processing, autonomous vehicles are designed to navigate complex environments with precision, reacting to obstacles and traffic conditions faster than human drivers.</p>
+      <p>The adoption of autonomous vehicles is steadily increasing across different regions, driven by the potential benefits they offer, including reduced congestion, lower emissions, and improved accessibility for individuals who may have limitations preventing them from driving. As this technology continues to evolve, we stand at the threshold of a transportation revolution that could redefine the way people commute, interact with their surroundings, and experience mobility in their daily lives. With continuous improvements and integration into modern infrastructure, autonomous vehicles pave the way for a future where transportation is smarter, safer, and more sustainable.</p>
     </section>
   </div>
 
