--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -96,6 +95,17 @@
       <h2>Future of Transportation: Autonomous Vehicles</h2>
       <p>The advancement of transportation technology continues to push the boundaries of innovation, with autonomous vehicles emerging as a key development in the quest for safer and more efficient mobility. This prototype represents a significant step toward reducing traffic accidents caused by human error, enhancing road safety, and optimizing urban transportation systems. By utilizing advanced artificial intelligence, sensors, and real-time data processing, autonomous vehicles are designed to navigate complex environments with precision, reacting to obstacles and traffic conditions faster than human drivers.</p>
       <p>The adoption of autonomous vehicles is steadily increasing across different regions, driven by the potential benefits they offer, including reduced congestion, lower emissions, and improved accessibility for individuals who may have limitations preventing them from driving. As this technology continues to evolve, we stand at the threshold of a transportation revolution that could redefine the way people commute, interact with their surroundings, and experience mobility in their daily lives. With continuous improvements and integration into modern infrastructure, autonomous vehicles pave the way for a future where transportation is smarter, safer, and more sustainable.</p>
+    </section>
+
+    <section id="team">
+      <h2>Team Members</h2>
+      <ul>
+        <li>Angelina Elizondo Villarreal – 2232899</li>
+        <li>Diego Emiliano Estrada Viera – 2232946</li>
+        <li>Carolina Esmeralda Moreno – 2232937</li>
+        <li>Sara Patricia García Ramírez – 2232870</li>
+        <li>Abril Jocelyn García Gloria – 2232944</li>
+      </ul>
     </section>
   </div>
 
